converted to markdown

--- a/02 DataTypes/05 IEEE754.md
+++ b/02 DataTypes/05 IEEE754.md
@@ -1,4 +1,6 @@
-let's break down the process of representing the decimal number 0.1 in binary, then in IEEE 754 floating-point format (32 bit).
+## IEEE 754 Floating-Point Representation using example
+
+Let's break down the process of representing the decimal number 0.1 in binary, then in IEEE 754 floating-point format (32 bit).
 
 ### 1. Binary Representation
 
