--- a/02 DataTypes/05 IEEE754.md
+++ b/02 DataTypes/05 IEEE754.md
@@ -27,9 +27,9 @@ Now, let's represent this binary fraction in IEEE 754 single-precision floating-
 
 - The exponent is used to represent the magnitude of the number and is biased.
 - There are 8 bits in 32 bit Floating point representation.
-- In IEEE 754 single-precision format, the bias is 2^7 - 1 = 127 (2^(L-1) -1 where l is number of exponent bits).
+- In IEEE 754 single-precision format, the bias is $2^{7}$ - 1 = 127 ($ 2^{(L-1)} -1 $ where l is number of exponent bits).
 - To represent the exponent, we need to determine how many positions the binary point needs to be shifted to normalize the binary fraction.
-- For 0.1, the binary fraction is (1.1001100110011001100110011001100110011... X 2^{-4}).
+- For 0.1, the binary fraction is (1.1001100110011001100110011001100110011... X $ 2^{-4}) $.
 - So, the biased exponent is ( -4 + 127 = 123 ), which in binary is (01111011).
 
 #### Mantissa
@@ -45,9 +45,9 @@ Putting it all together:
 
 ### Formulas
 
-- **Normalized Representation**: (1.xxxxxxx X 2^n), where (x) represents the fractional part of the binary number and (n) is the exponent.
-- **Exponent Calculation**: (exponent = unbiased, exponent + bias), where the bias is 2^(L-1) -1 for single-precision.
-- **Bias**: The bias is added to the unbiased exponent to get the stored exponent. For single-precision, the bias is 2^(L-1) -1
+- **Normalized Representation**: (1.xxxxxxx X $2^{n}$), where (x) represents the fractional part of the binary number and (n) is the exponent.
+- **Exponent Calculation**: (exponent = unbiased, exponent + bias), where the bias is $ 2^{(L-1)} -1 $ for single-precision.
+- **Bias**: The bias is added to the unbiased exponent to get the stored exponent. For single-precision, the bias is $ 2^{(L-1)} -1 $
 - **where L is number of exponent bits**.
 
 This representation allows us to accurately store and manipulate fractional numbers in a binary system.
