--- a/02 DataTypes/05 IEEE754.md
+++ b/02 DataTypes/05 IEEE754.md
@@ -27,9 +27,9 @@ Now, let's represent this binary fraction in IEEE 754 single-precision floating-
 
 - The exponent is used to represent the magnitude of the number and is biased.
 - There are 8 bits in 32 bit Floating point representation.
-- In IEEE 754 single-precision format, the bias is $2^{7}$ - 1 = 127 ($ 2^{(L-1)} -1 $ where l is number of exponent bits).
+- In IEEE 754 single-precision format, the bias is $ 2^{7} $ - 1 = 127 ( $ 2^{(L-1)} -1 $ where l is number of exponent bits).
 - To represent the exponent, we need to determine how many positions the binary point needs to be shifted to normalize the binary fraction.
-- For 0.1, the binary fraction is (1.1001100110011001100110011001100110011... X $ 2^{-4}) $.
+- For 0.1, the binary fraction is (1.1001100110011001100110011001100110011... X $ 2^{-4} $).
 - So, the biased exponent is ( -4 + 127 = 123 ), which in binary is (01111011).
 
 #### Mantissa
