--- a/02 DataTypes/05 IEEE754.md
+++ b/02 DataTypes/05 IEEE754.md
@@ -1,53 +1,54 @@
-## IEEE 754 Floating-Point Representation using example
+## IEEE 754 Floating-Point Representation Using Example
 
-Let's break down the process of representing the decimal number 0.1 in binary, then in IEEE 754 floating-point format (32 bit).
+Let's break down the process of representing the decimal number 0.1 in binary and then in IEEE 754 floating-point format (32-bit).
 
 ### 1. Binary Representation
 
-To represent 0.1 in binary, we use the fractional binary representation. This involves repeatedly multiplying the fractional part by 2 and recording the integer part of the result at each step until we reach the desired precision or the fraction becomes 0.
+To represent 0.1 in binary, we repeatedly multiply the fractional part by 2 and record the integer part of the result at each step until we reach the desired precision.
 
 For 0.1:
 
-1. Multiply 0.1 by 2: (0.1 X 2 = 0.2). Record the integer part, which is 0.
-2. Multiply the fractional part (0.2) by 2: (0.2 X 2 = 0.4). Record the integer part, which is 0.
-3. Repeat this process until we get the desired precision or the fraction becomes 0.
+1. Multiply 0.1 by 2: $0.1 \times 2 = 0.2$. Record the integer part: 0.
+2. Multiply 0.2 by 2: $0.2 \times 2 = 0.4$. Record the integer part: 0.
+3. Continue this process: $0.4 \times 2 = 0.8$ (integer part: 0), $0.8 \times 2 = 1.6$ (integer part: 1), etc.
 
-This process yields a repeating binary fraction:
-[0.0001100110011001100110011001100110011...]
+This yields a repeating binary fraction: $0.00011001100110011\ldots$
 
 ### 2. IEEE 754 Floating-Point Representation
 
-Now, let's represent this binary fraction in IEEE 754 single-precision floating-point format, which consists of three parts: sign bit, exponent, and mantissa.
+IEEE 754 single-precision format consists of three parts: sign bit, exponent, and mantissa.
 
 #### Sign Bit
 
-- Since 0.1 is a positive number, the sign bit is 0.
+- Since 0.1 is positive, the sign bit is 0.
 
 #### Exponent
 
-- The exponent is used to represent the magnitude of the number and is biased.
-- There are 8 bits in 32 bit Floating point representation.
-- In IEEE 754 single-precision format, the bias is $ 2^{7} $ - 1 = 127 ( $ 2^{(L-1)} -1 $ where l is number of exponent bits).
-- To represent the exponent, we need to determine how many positions the binary point needs to be shifted to normalize the binary fraction.
-- For 0.1, the binary fraction is (1.1001100110011001100110011001100110011... X $ 2^{-4} $).
-- So, the biased exponent is ( -4 + 127 = 123 ), which in binary is (01111011).
+- There are 8 bits for the exponent in 32-bit floating-point representation.
+- The bias for the exponent is $2^7 - 1 = 127$.
+- Normalize the binary fraction: $0.1_{10} = 1.1001100110011\ldots \times 2^{-4}$.
+- Calculate the biased exponent: $-4 + 127 = 123$.
+- Convert 123 to binary: $01111011$.
 
 #### Mantissa
 
-- The mantissa is the fraction part of the normalized binary number.
-- In IEEE 754 single-precision format, it is normalized by appending 23 bits after the binary point.
-- For 0.1, the fractional part after normalization is (10011001100110011001100).
+- The mantissa is the fractional part of the normalized binary number.
+- In 32-bit format, it includes 23 bits after the binary point.
+- For 0.1, the mantissa is $10011001100110011001100$.
 
 ### Final Representation
 
-Putting it all together:
-[0 01111011 10011001100110011001100]
+Combining all parts:
+- **Sign bit**: 0
+- **Exponent**: 01111011
+- **Mantissa**: 10011001100110011001100
+
+Final IEEE 754 representation: `0 01111011 10011001100110011001100`
 
 ### Formulas
 
-- **Normalized Representation**: (1.xxxxxxx X $2^{n}$), where (x) represents the fractional part of the binary number and (n) is the exponent.
-- **Exponent Calculation**: (exponent = unbiased, exponent + bias), where the bias is $ 2^{(L-1)} -1 $ for single-precision.
-- **Bias**: The bias is added to the unbiased exponent to get the stored exponent. For single-precision, the bias is $ 2^{(L-1)} -1 $
-- **where L is number of exponent bits**.
+- **Normalized Representation**: $1.xxxxxxx \times 2^n$
+- **Exponent Calculation**: exponent = unbiased exponent + bias
+- **Bias**: $2^{(L-1)} - 1$ (for single-precision, $L = 8$, so bias = 127)
 
-This representation allows us to accurately store and manipulate fractional numbers in a binary system.
+This representation allows accurate storage and manipulation of fractional numbers in a binary system.
